fixed initial button click and mozilla text align

--- a/css/index.scss
+++ b/css/index.scss
@@ -20,6 +20,9 @@ body {
 }
 
 .header-section {
+  @supports (-moz-appearance:none) {
+    text-align: -moz-center !important;
+  }
   text-align: -webkit-center;
 }
 
